--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,11 +17,8 @@
     <!-- optional: include a file here that configures the Jasmine env -->
     <script src="lib/jasmine-5.1.1/boot1.js"></script>
 
-    <!-- include source files here... -->
-    <script src="src/00-0-hello-world.js"></script>
-
     <!-- include spec files here... -->
-    <script src="test/00-0-hello-world.spec.js"></script>
+    <script src="test/06-modules.spec.js"></script>
   </head>
 
   <body></body>
