--- a/src/lessons/iife/index.html
+++ b/src/lessons/iife/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>IIFE</title>
-  </head>
+	<head>
+		<meta charset="utf-8" />
+		<title>IIFE</title>
+	</head>
 
-  <body>
-    <h1>IIFE</h1>
-    <p>
-      An IIFE, or Immediately Invoked Function Expression, is a function that is
-      executed right after it is created. It is a design pattern that is used to
-      avoid polluting the global namespace.
-    </p>
-  </body>
+	<body>
+		<h1>IIFE</h1>
+		<p>
+			An IIFE, or Immediately Invoked Function Expression, is a function that is
+			executed right after it is created. It is a design pattern that is used to
+			avoid polluting the global namespace.
+		</p>
+		<script src="./numberInventory.js"></script>
+	</body>
 </html>
